--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>javax.mail</groupId>
-		    <artifactId>javax.mail-api</artifactId>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
 		    <version>1.6.0</version>
 		</dependency>
 	</dependencies>
