--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 		    <artifactId>javax.mail</artifactId>
 		    <version>1.6.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>1.16</version>
+		</dependency>
 	</dependencies>
 	
 
