--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 		    <artifactId>tika-core</artifactId>
 		    <version>1.16</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 	
 
