--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.mail.host = smtp.gmail.com
-spring.mail.username = bg9gag@gmail.com
-spring.mail.password = bg9gagbg9gag
+
+
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username=<login user to smtp server>
+spring.mail.password=<login password to smtp server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
